# megaboom

./: BUILD.bazel  MODULE.bazel  init.sh  variables.bzl
.github/workflows/: ci.yml  ci_docker.yml
subpackage/: BUILD
