module(
    name = "megaboom",
    version = "0.0.1",
    compatibility_level = 1,
)

bazel_dep(name = "bazel-orfs")
git_override(
    module_name = "bazel-orfs",
    remote = "https://github.com/antmicro/bazel-orfs.git",
    commit = "9ecf745a6e049186bfddffd8a7e4932f1473fc70",
)

#local_path_override(
#    module_name = "bazel-orfs", path = "../bazel-orfs"
#)
