module(
    name = "megaboom",
    version = "0.0.1",
    compatibility_level = 1,
)

bazel_dep(name = "bazel-orfs")
git_override(
    module_name = "bazel-orfs",
    remote = "https://github.com/The-OpenROAD-Project/bazel-orfs.git",
    commit = "7c93ec020bb1b9046ade27c63c27c21e8436c083",
)

# Read: https://github.com/The-OpenROAD-Project/bazel-orfs?tab=readme-ov-file#usage
#
# TL;DR
#
# 1. uncomment below
# 2. comment git_override() above
#
#local_path_override(
#   module_name = "bazel-orfs", path = "../bazel-orfs"
#)
