module(
    name = "megaboom",
    version = "0.0.1",
    compatibility_level = 1,
)

bazel_dep(name = "bazel-orfs")
git_override(
    module_name = "bazel-orfs",
    remote = "https://github.com/The-OpenROAD-Project/bazel-orfs.git",
    commit = "bb07fa6ea42a82dcf04ffdc57bbc95cf338204fb",
)

# Read: https://github.com/The-OpenROAD-Project/bazel-orfs?tab=readme-ov-file#usage
#
# TL;DR
#
# 1. uncomment below
# 2. comment git_override() above
#
#local_path_override(
#   module_name = "bazel-orfs", path = "../bazel-orfs"
#)
